<resources>
    <string name="app_name">flat</string>
    <string name="error_message">Error fetching data</string>
    <string name="house_icon_description">House Icon</string>
    <string name="bed_icon_description">House Icon</string>
    <string name="currency_icon_description">Currency Icon</string>
    <string name="location_icon_description">Location Icon</string>
    <string name="search_title">Search...</string>
    <string name="room_type_text_view_msg">Rooms</string>
    <string name="price_text_view_msg">Price</string>
    <string name="location_text_view_msg">Location</string>
    <string name="submit">Call Owner</string>
    <string name="description_title">Description</string>
    <string name="search_button_text">Search</string>
    <string name="search_location_hint">Enter Location</string>
    <string name="seach_room_type_hint">Number of Rooms</string>
    <string name="search_price_hint">Price</string>
    <string name="search_owner">Owner</string>
    <string name="search_data_error">Please insert valid search terms</string>
    <string name="welcome_message">Fetching rentals for you...</string>
</resources>
