<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/app_padding"
    android:weightSum="3">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_weight="2"
        android:contentDescription="@string/house_icon_description"
        app:srcCompat="@drawable/home_city_outline" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="6">

        <ImageView
            android:id="@+id/bed_icon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/bed_icon_description"
            app:srcCompat="@drawable/bed_empty" />

        <TextView
            android:id="@+id/room_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="TextView"
            android:textAlignment="textEnd"
            android:textSize="@dimen/normal_text_size" />

        <ImageView
            android:id="@+id/currency_icon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/currency_icon_description"
            app:srcCompat="@drawable/currency_usd" />

        <TextView
            android:id="@+id/price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="TextView"
            android:textAlignment="textEnd"
            android:textSize="@dimen/normal_text_size" />

        <ImageView
            android:id="@+id/location_icon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/location_icon_description"
            app:srcCompat="@drawable/map_marker" />

        <TextView
            android:id="@+id/location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="TextView"
            android:textAlignment="textEnd"
            android:textSize="@dimen/normal_text_size" />
    </LinearLayout>
</LinearLayout>