<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="Room"
            type="com.example.flat.Room" />
    </data>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/app_padding"
    tools:context=".RoomDetailActivity">

    <ImageView
        android:id="@+id/rd_home_icon_main"
        android:layout_width="0dp"
        android:layout_height="300dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/bed_icon_description"
        android:imageUrl="@{Room.image}" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/summary_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/components_vertical_spacing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.1"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rd_home_icon_main">

        <ImageView
            android:id="@+id/rd_home_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/bed_icon_description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/rd_room_type"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/bed_empty" />

        <TextView
            android:id="@+id/rd_room_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{Room.roomType}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/rd_currency_icon"
            app:layout_constraintStart_toEndOf="@id/rd_home_icon"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/rd_currency_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/currency_icon_description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/rd_price"
            app:layout_constraintStart_toEndOf="@id/rd_room_type"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/currency_usd" />

        <TextView
            android:id="@+id/rd_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{Integer.toString(Room.price)}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/rd_location_icon"
            app:layout_constraintStart_toEndOf="@id/rd_currency_icon"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/rd_location_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/location_icon_description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/rd_location"
            app:layout_constraintStart_toEndOf="@id/rd_price"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/map_marker" />

        <TextView
            android:id="@+id/rd_location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{Room.location}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/rd_location_icon"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/more_layout"
        android:layout_marginTop="@dimen/components_vertical_spacing"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/summary_layout">

        <TextView
            android:id="@+id/rd_description_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/description_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/rd_description"
            android:layout_width="wrap_content"
            android:text="@{Room.description}"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rd_description_title" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:contentDescription="@string/submit"
        app:srcCompat="@drawable/phone_plus"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>